      - Renamed TypeScript interfaces `ISplitFactoryProps` to `ISplitFactoryProviderProps`, and `ISplitFactoryChildProps` to `ISplitFactoryProviderChildProps`.
      - Renamed `SplitSdk` to `SplitFactory` function, which is the underlying Split SDK factory, i.e., `import { SplitFactory } from '@splitsoftware/splitio'`.

1.13.0 (September 6, 2024)
 - Updated @splitsoftware/splitio package to version 10.28.0 that includes minor updates:
      - Added `sync.requestOptions.getHeaderOverrides` configuration option to enhance SDK HTTP request Headers for Authorization Frameworks.
      - Updated some transitive dependencies for vulnerability fixes.

1.12.1 (August 2, 2024)
 - Updated @splitsoftware/splitio package to version 10.27.0 and some transitive dependencies for vulnerability fixes.

1.12.0 (May 10, 2024)
 - Updated @splitsoftware/splitio package to version 10.26.0 that includes minor updates:
      - Added support for targeting rules based on semantic versions (https://semver.org/).
      - Added special impression label "targeting rule type unsupported by sdk" when the matcher type is not supported by the SDK, which returns 'control' treatment.
      - Updated Split API client to include the flags spec version query parameter for the `splitChanges` and `auth` endpoints.
 - Updated internal use of the SDK client to remove EventEmitter memory leak warnings. These warnings were emitted when using multiple hooks and components from the SDK simultaneously, but they do not indicate an actual memory leak and are irrelevant for SDK usage (Related to https://github.com/splitio/react-client/issues/191).

1.11.1 (March 26, 2024)
 - Bugfixing - Added tslib as an explicit dependency to avoid issues with some package managers that don't resolve it automatically as a transitive dependency from @splitsoftware/splitio-commons (Related to issue https://github.com/splitio/javascript-client/issues/795).

1.11.0 (January 16, 2024)